--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "url": "git+https://github.com/TkachAn/JS-HomeWork-8.git"
   },
   "keywords": [],
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "Andrey Tkachenko <4ndrey.Tkachenko@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/goitacademy/parcel-project-template/issues"
+    "url": "https://tkachan.github.io/JS-HomeWork-8/issues"
   },
   "dependencies": {
     "@vimeo/player": "^2.17.0",
